SAR Blai Sandbox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ATC_Centro2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ATC Centro2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>ATC Centro</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cuentas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATC_Centro3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ATC Centro3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>ATC Centro</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cuentas3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATC_Centro4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ATC Centro4</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>ATC Centro</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cuentas4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATC_Zona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ATC Zona</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>ATC Zona</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ATC_Zona</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acompanamiento_para_salidas_medicas__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Acompañamiento para salidas médicas o lúdicas periódicas</description>
        <inlineHelpText>Acompañamiento para salidas médicas o lúdicas periódicas</inlineHelpText>
        <label>Acompañamiento p/salidas médicas (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actividades_ludicas__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Actividades lúdicas diarias, celebraciones de cumpleaños, onomásticas y fiestas tradicionales.</description>
        <inlineHelpText>Actividades lúdicas diarias, celebraciones de cumpleaños, onomásticas y fiestas tradicionales.</inlineHelpText>
        <label>Actividades lúdicas (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actualizar_direccion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dirección actualizada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adorea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adorea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alquiler_de_ayudas_tecnicas__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Alquiler de ayudas técnicas (RD_CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Animador_Socio_Cultural_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Animador Socio Cultural</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aniversario_apertura__c</fullName>
        <formula>DATEVALUE( TEXT( YEAR ( TODAY() ) ) &amp; &quot;-&quot; &amp;
    TEXT( MONTH ( Fecha_apertura__c) ) &amp; &quot;-&quot; &amp;
    TEXT( DAY ( Fecha_apertura__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aniversario_apertura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ano_analisis__c</fullName>
        <label>Año análisis</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellido_2__c</fullName>
        <inlineHelpText>Campo obligatorio para residentes. Recomendable en el resto de contactos.</inlineHelpText>
        <label>Apellido 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apoyo_y_atencion_psicologica__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Apoyo y atención psicológica (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Atencion_medica_enfermeria__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Atención médica/enfermería (CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Baja__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Baja</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bcn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barcelona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Biblioteca__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Biblioteca (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bien_senalizada_externamente_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bien señalizada externamente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blog__c</fullName>
        <label>Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CD_UD__c</fullName>
        <label>CD/UED</label>
        <picklist>
            <picklistValues>
                <fullName>Centro de día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unidad de Estancia Diurna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIF_NIF__c</fullName>
        <label>CIF/NIF</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cafeteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cafetería (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caja_de_seguridad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Caja de seguridad (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calle__c</fullName>
        <label>Calle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cama_ergonomica_y_bano_asistido__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Cama ergonómica y baño asistido en la habitación.</description>
        <inlineHelpText>Cama ergonómica y baño asistido en la habitación.</inlineHelpText>
        <label>Cama ergonómica y baño asistido (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacidad_Teorica__c</fullName>
        <label>Capacidad Teórica</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capilla__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capilla (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoría</label>
        <picklist>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SARqSuperior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easy SARq</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Centro_LlamadasTelefonicas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Llamadas telefónicas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Centro_VentaProductosHigiene__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Venta de productos de higiene personal, accesorios</description>
        <inlineHelpText>Venta de productos de higiene personal, accesorios</inlineHelpText>
        <label>Venta de productos de higiene personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Centro_Zona__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Informar como mínimo una zona comercial si no es una sede central</inlineHelpText>
        <label>Centro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Centro_de_aplicacion_Convenio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Centro de aplicación Convenio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAeAAAW</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clasificacion__c</fullName>
        <label>Clasificación</label>
        <picklist>
            <picklistValues>
                <fullName>Agencias de Viajes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agencias Públicas, Empresas Públicas, Institutos Públicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asociaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayuntamiento, Diputación, Concejalías-Equipos de Gobierno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centros Cívicos, Casales, Centros Mayores, Hogar Mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centros de dia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centros Dentales, Ópticas, Físios, Podólogos, Dentistas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centros de Salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clínicas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colegios profesionales, Asesorías, Bufetes, Profesionales Liberales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empresas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmacias y Ortopedias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundaciones y Fundaciones tutelares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mútuas, Aseguradoras, Bancos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicios Sociales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universidades, Colegios, Centros de Formación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entidades finacieras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instituciones públicas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empresas privadas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundaciones y Asociaciones privadas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proveedores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBDD adquiridas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Particulares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>...</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clasificacion_tipo_Recomendador_TA__c</fullName>
        <label>Clasificación tipo Recomendador TA</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clasificacion_tipo_recomendador__c</fullName>
        <inlineHelpText>Para la división Residencial</inlineHelpText>
        <label>Clasificación tipo Recomendador RES</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cocina_Propia_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cocina Propia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Codigo_Blog__c</fullName>
        <label>Codigo Blog</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_postal__c</fullName>
        <label>Código postal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comedores_de_planta_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comedores de planta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comisionista__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comisionista</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comunicacion_con_familias__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comunicación con famílias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comunidad_Autonoma__c</fullName>
        <formula>CASE( Provincia__c ,
&apos;A Coruña&apos;,&apos;Galicia&apos;,
&apos;Álava&apos;,&apos;País Vasco&apos;,
&apos;Albacete&apos;,&apos;Castilla - la Mancha&apos;,
&apos;Alacant&apos;,&apos;Com. Valenciana&apos;,
&apos;Almería&apos;,&apos;Andalucía&apos;,
&apos;Asturias&apos;,&apos;Asturias&apos;, 
&apos;Ávila&apos;,&apos;Castilla y León&apos;,
&apos;Badajoz&apos;,&apos;Extremadura&apos;,
&apos;Barcelona&apos;,&apos;Catalunya&apos;,
&apos;Burgos&apos;,&apos;Castilla y León&apos;,
&apos;Zamora&apos;,&apos;Castilla y León&apos;,
&apos;Cáceres&apos;,&apos;Extremadura&apos;,
&apos;Cádiz&apos;,&apos;Andalucía&apos;,
&apos;Cantabria&apos;,&apos;Cantabria&apos;,
&apos;Castelló&apos;,&apos;Com. Valenciana&apos;,
&apos;Ceuta&apos;,&apos;Ceuta&apos;,
&apos;Ciudad Real&apos;,&apos;Castilla - la Mancha&apos;,
&apos;Córdoba&apos;,&apos;Andalucía&apos;,
&apos;Cuenca&apos;,&apos;Castilla - la Mancha&apos;,
&apos;Gipuzkoa&apos;,&apos;País Vasco&apos;,
&apos;Girona&apos;,&apos;Catalunya&apos;, 
&apos;Granada&apos;,&apos;Andalucía&apos;,
&apos;Guadalajara&apos;,&apos;Castilla - la Mancha&apos;,
&apos;Huelva&apos;,&apos;Andalucía&apos;, 
&apos;Huesca&apos;,&apos;Aragón&apos;,
&apos;Illes Balears&apos;,&apos;Illes Barears&apos;,
&apos;Jaén&apos;,&apos;Málaga&apos;,
&apos;La Rioja&apos;,&apos;La Rioja&apos;,
&apos;Las Palmas&apos;,&apos;Islas Canarias&apos;,
&apos;León&apos;,&apos;Castilla y León&apos;,
&apos;Lleida&apos;,&apos;Catalunya&apos;,
&apos;Lugo&apos;,&apos;Galicia&apos;,
&apos;Madrid&apos;,&apos;Madrid&apos;,
&apos;Málaga&apos;,&apos;Andalucía&apos;,
&apos;Melilla&apos;,&apos;Melilla&apos;,
&apos;Murcia&apos;,&apos;Murcia&apos;,
&apos;Navarra&apos;,&apos;Navarra&apos;,
&apos;Ourense&apos;,&apos;Galicia&apos;,
&apos;Palencia&apos;,&apos;Castilla y León&apos;,
&apos;Pontevedra&apos;,&apos;Galicia&apos;,
&apos;Salamanca&apos;,&apos;Castilla y León&apos;,
&apos;Santa Cruz de Tenerife&apos;,&apos;Islas Canarias&apos;,
&apos;Segovia&apos;,&apos;Castilla y León&apos;,
&apos;Sevilla&apos;,&apos;Andalucía&apos;,
&apos;Soria&apos;,&apos;Castilla y León&apos;,
&apos;Tarragona&apos;,&apos;Catalunya&apos;,
&apos;Teruel&apos;,&apos;Aragón&apos;,
&apos;Toledo&apos;,&apos;Castilla - la Mancha&apos;,
&apos;Valencia&apos;,&apos;Com. Valenciana&apos;,
&apos;Valladolid&apos;,&apos;Castilla y León&apos;,
&apos;Bizkaia&apos;,&apos;País Vasco&apos;, 
&apos;Zaragoza&apos;,&apos;Aragón&apos;,
&apos;&apos;,&apos;&apos;,
&apos;No encontrado&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comunidad Autónoma</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concierto_Publico_CD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concierto Público CD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concierto_Publico_RD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concierto público RD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_de_tratamientos_medicos__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Control y aplicación de tratamientos médicos, cuidados de enfermería y seguimiento de medicación.</description>
        <inlineHelpText>Control y aplicación de tratamientos médicos, cuidados de enfermería y seguimiento de medicación.</inlineHelpText>
        <label>Control de tratamientos médicos (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Convenio_Firmado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convenio Firmado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correo_Electronico_Generico__c</fullName>
        <label>Correo Electrónico Genérico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dataloader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control registros carga inicial con el Dataloader</description>
        <label>Dataloader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>De_1_a_5_dias_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>De 1 a 5 días</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>De_1_a_7_dias_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>De 1 a 7 días</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dietas_adaptadas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dietas adaptadas a las necesidades individuales, programadas por el departamento de nutrición.</description>
        <inlineHelpText>Dietas adaptadas a las necesidades individuales, programadas por el departamento de nutrición.</inlineHelpText>
        <label>Dietas adaptadas (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Director_del_centro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Campo obligatorio si el centro está Activo</inlineHelpText>
        <label>Director del centro</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Director Centro</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Director_centro</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distancia_al_centro_capital_del__c</fullName>
        <label>Distancia al centro/capital</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_SS__c</fullName>
        <label>División</label>
        <picklist>
            <picklistValues>
                <fullName>Adorea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domiciliaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teleasistencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SARDomus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>División</label>
        <picklist>
            <picklistValues>
                <fullName>Residencial</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Adorea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAR Domus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domiciliaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teleasistencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domiciliaria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domiciliaria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_secundario__c</fullName>
        <label>Email secundario</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Empresa_recomendadora__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entidad recomendadora</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAd7AAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cuentas (Empresa recomendadora)</relationshipLabel>
        <relationshipName>Cuentas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enfermeria_24h_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enfermería 24h</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entidad_Centro_de_trabajo__c</fullName>
        <label>Entidad/Empresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entrega_doc_precio_ofrecido_y_servicios__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrega doc precio ofrecido y servicios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Espacio_exterior__c</fullName>
        <label>Espacio exterior</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Espacio_interior__c</fullName>
        <label>Espacio interior</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estado_Civil__c</fullName>
        <label>Estado Civil</label>
        <picklist>
            <picklistValues>
                <fullName>Soltero/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorciado/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viudo/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casado/a</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estado_cognitivo__c</fullName>
        <label>Estado cognitivo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estado_convenio__c</fullName>
        <label>Estado convenio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_de_Instalaciones__c</fullName>
        <label>Estado de Instalaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estado_fisico__c</fullName>
        <label>Estado físico</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Este__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Este</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimaci_n_de_la_ocupaci_n_P_b_del__c</fullName>
        <label>Estimación de la ocupación (Púb)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimacion_de_la_ocupacion_P_b_CD_del__c</fullName>
        <label>Estimación de la ocupación (Púb) CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimacion_de_la_ocupacion_Priv_CD_del__c</fullName>
        <label>Estimación de la ocupación (Priv) CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimacion_de_la_ocupacion_Priv_del__c</fullName>
        <label>Estimación de la ocupación (Priv)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evaluacion_gerontologica__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Evaluación gerontológica (CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exitus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exitus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilidad_Accesso_Visita_Centros__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facilidad Accesso Visita Centros</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitan_Precios_por_telefono__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facilitan Precios por teléfono</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fecha_apertura__c</fullName>
        <label>Fecha apertura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_aviso_Aniversario2__c</fullName>
        <label>Fecha aviso Aniversario2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fianza__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fianza</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fin_de_semana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fin de semana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fisioterapia_individual__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Fisioterapia individual, rehabilitación y gimnasia de mantenimiento.</description>
        <inlineHelpText>Fisioterapia individual, rehabilitación y gimnasia de mantenimiento.</inlineHelpText>
        <label>Fisioterapia individual (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fisioterapia_y_rehabilitacion_especiales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fisioterapia y rehabilitación  (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fisoterapeuta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fisoterapeuta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floristeria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Floristeria (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formato_Plan_Personalizado__c</fullName>
        <description>Indica el formato que utilizaremos cuando imprimimos un plan personalizado de este centro</description>
        <label>Formato Plan Personalizado</label>
        <picklist>
            <picklistValues>
                <fullName>F22   (por defecto)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F31   Tres grupos en la primera página</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F40   Todos los grupos en la primera página</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Franja_horaria_de_contacto__c</fullName>
        <label>Franja horaria de contacto</label>
        <picklist>
            <picklistValues>
                <fullName>8 - 9h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - 14h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - 16h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 - 19h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19 - 21h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiferente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fuente__c</fullName>
        <label>Fuente</label>
        <picklist>
            <picklistValues>
                <fullName>Colectivos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consejeros SARquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contactos Corporativos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornadas y eventos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prensa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesionales SARquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suscriptores blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suscriptores Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web (formularios)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webs sector</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gestion_de_las_visitas__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Gestión de las visitas a especialistas médicos</description>
        <inlineHelpText>Gestión de las visitas a especialistas médicos</inlineHelpText>
        <label>Gestión de las visitas (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gestion_de_recetas_medicas__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Gestión de recetas médicas (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gimnasio__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Gimnasio (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Habitacion_Doble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Habitación Doble</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Habitacion_Individual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Habitación Individual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historia_de_vida_adjunta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historia de vida adjunta</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>